[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nightmarun-Assets/Valuables/Coin-Flipping.png" type="Texture" id=1]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Score-Counters/CoinScoreLabel.gd" type="Script" id=3]
[ext_resource path="res://Nightmarun-Assets/Valuables/Skull.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "CoinCollected"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Label2/SkullS:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.7 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SkullCollected"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Label2/SkullS:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.7 ), Vector2( 1, 0.9 ), Vector2( 0.8, 0.7 ) ]
}

[node name="CoinScoreLabel" type="CanvasLayer"]
visible = false
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.818
anchor_right = 0.987
anchor_bottom = 0.085
margin_left = 0.0599976
margin_top = 6.0
margin_right = -0.210022
margin_bottom = 0.200001
custom_fonts/font = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
anchor_left = 0.818
anchor_right = 0.987
anchor_bottom = 0.085
margin_left = -199.94
margin_top = 6.0
margin_right = -200.21
margin_bottom = 0.200001
custom_fonts/font = SubResource( 1 )

[node name="SkullS" type="Sprite" parent="Label2"]
position = Vector2( -25, 16 )
scale = Vector2( 0.8, 0.7 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 648, 21 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/CoinCollected = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/SkullCollected = SubResource( 4 )

[node name="MileLabel" type="Label" parent="."]
anchor_left = 0.818
anchor_right = 0.987
anchor_bottom = 0.085
margin_left = -668.94
margin_top = 6.0
margin_right = -485.21
margin_bottom = -10.8
custom_fonts/font = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
